# ledger-cli

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: ledger.json  sample_transactions.json
ledger/: __init__.py  colors.py  engine.py  models.py  reports.py  storage.py
templates/: index.html  ledger.html
tests/: test_ledger.py
